[package]
name = "typo3nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt","rt-multi-thread","macros","signal"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive","rc"] }
serde_json = { version = "1.0" }
indexmap = { version = "1.9", features = ["serde-1"] }

reqwest = { version = "0.11", features = ["json","stream"]}
ssri = "8.0"
